[pinot] add default query option support  (#1105)